# Ko-MM-VQA

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.streamlit/: secrets.toml.example
komm_vqa/app/: __init__.py  config.py  db.py  main.py
komm_vqa/app/components/: __init__.py  image_viewer.py  page_selector.py  query_form.py
komm_vqa/app/pages/: 1_File_Management.py  2_QA_Creation.py  3_Data_Browser.py
komm_vqa/postgresql/db/init/: 002-seed.sql
postgresql/: .env.example  docker-compose.yml
postgresql/db/init/: 001-schema.sql
tests/: test_foo.py
